# assetx

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: a2_piper.py
scripts/: mjc_transforms.py  mjcf2usd.py  test.py  usd_transforms.py
src/assetx/: __init__.py  assemble.py  cli.py  common.py  conversion.py  find_workspace.py  transform.py  utils.py
src/assetx/core/: __init__.py  assemble.py  asset.py  builders.py  transforms.py
tools/: extract_meshes.py  mjcf2urdf.py  urdf2mjcf.py
tools/research/: find_workspace.py
