[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "assetx"
version = "0.1.0"
description = "Compose and transform MuJoCo (MJCF) robot models."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = []
keywords = ["mujoco", "mjcf", "robotics", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Robotics",
]
dependencies = [
    "mujoco",
    "scipy",
    "mujoco-usd-converter",
]

[project.optional-dependencies]
research = [
    "mujoco-warp",
    "trimesh",
    "viser",
]
usd = [
    "trimesh",
    "usd-core",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
